--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 *{
-    font-family: 'Sacramento',cursive ;
+    /* font-family: 'Sacramento',cursive ; */
     font-weight: 400;
     font-size: 1.4rem;
 }
